--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/pernellbauza/se_project_express#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^6.6.1",
+    "mongoose": "^8.0.3",
     "validator": "^13.11.0"
   },
   "devDependencies": {
@@ -29,6 +29,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.33.2",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1"
   }
